vlib/v/checker/tests/array_init_sum_type_without_init_value_and_len_err.vv
type Foo = int | string

fn main() {
	a := []Foo{len: 10}
	println(a)

	fixed_a := [10]Foo{}
	println(fixed_a)
}
